--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,8 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+client/node_modules
+server/node_modules
 
 # Editor directories and files
 .vscode/*
