--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
     "tailwindcss": "^3.2.7"
   },
