--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.8.2",
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
+    "swiper": "^9.1.0",
     "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
