--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
+    "mongodb": "^5.1.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
