--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.1",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^18.15.0",
 		"nodemon": "^2.0.21",
 		"rimraf": "^4.4.0",
@@ -26,6 +27,7 @@
 		"express": "^4.18.2",
 		"express-validator": "^6.15.0",
 		"jsonwebtoken": "^9.0.0",
-		"mongoose": "^7.0.1"
+		"mongoose": "^7.0.1",
+		"multer": "^1.4.5-lts.1"
 	}
 }
